--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
+    "chart.js": "^2.9.3",
     "cordova": "^10.0.0",
     "cordova-cli": "^1.0.0",
     "ionic": "^5.4.16",
